Quorum3/Library/Tests/TypeCheckerGenerated/Pass/RetAssignTextUndefinedField.quorum
class Main
    text v = Test()
    action Main
        if v = undefined
            output "passed"
        end
    end

    action Test() returns text
        return undefined
    end
end