Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignNumObjText.quorum
class Main
    action Main
        Number v
        v:SetValue(Test())
    end

    action Test() returns Number
        text var = "text"
        return var
    end
end